# drone_simulator

./: CMakeLists.txt  Makefile  README.md  blackboard_process  input_window_process  obstacle_process  output_window_process  run.sh  server_process  target_process  test  watchdog_process
DDS/src/: CustomPublisher.hpp  CustomSubscriber.hpp  ObstaclesPublisher.hpp  ObstaclesSubscriber.hpp  TargetsPublisher.hpp  TargetsSubscriber.hpp
config/: config.yaml
include/: blackboard_handler.hpp  input_window_handler.h  ncurses_handler.h  obstacle_handler.h  obstacle_target_handler.h  output_window_handler.h  output_window_handler.hpp  physics_handler.h  server_handler.h  target_handler.h  watchdog_handler.h  watchdog_handler.hpp
log/: input_window_log.txt  obstacle_log.txt  obstacles_log.txt  output_window_log.txt  output_window_process_log.txt  server_log.txt  target_log.txt  targets_log.txt
src/: blackboard_handler.c  blackboard_handler.cpp  blackboard_process.c  blackboard_process.cpp  input_window_handler.c  input_window_handler.cpp  input_window_process.c  input_window_process.cpp  ncurses_handler.c  obstacle_handler.c  obstacle_handler.cpp  obstacle_process.c  obstacle_process.cpp  obstacle_target_handler.c  output_window_handler.c  output_window_handler.cpp  output_window_process.c  output_window_process.cpp  physics_handler.c  server_handler.c  server_handler.cpp  server_process.c  server_process.cpp  target_handler.c  target_handler.cpp  target_process.c  target_process.cpp  test.c  watchddog_process.c  watchdog_handler.c  watchdog_handler.cpp  watchdog_process.c  watchdog_process.cpp
